# scacchi

./: .gitignore  CMakeLists.txt  README.md  comandi_cmake.txt  idee.md  main.cpp  replay.cpp  scacchiera.cpp
cpp_files/: Bishop.cpp  Cell.cpp  Chessboard.cpp  Computer.cpp  Game.cpp  Human.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Replay.cpp  ReplayGame.cpp  Rook.cpp
header_files/: Bishop.h  Cell.h  Chessboard.h  Computer.h  Game.h  Human.h  King.h  Knight.h  Pawn.h  Piece.h  Player.h  Queen.h  Replay.h  ReplayGame.h  Rook.h
logs/: log_cc_game.txt  log_pc_game.txt
matches/: firstmatch.txt  promotionmatch.txt  secondmatch.txt  thirdmatch.txt
